Revise inspection report HTML layout and styles
Updated the HTML structure and styles for the inspection report.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>检验报告单（完美间距版）</title>
+    <title>检验报告单</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: "Microsoft YaHei", "PingFang SC", sans-serif; }
         body { background: #e6f0fa; padding: 0; margin: 0; }
@@ -150,4 +150,5 @@
         </div>
     </div>
 </body>
+
 </html>
